--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
+    "framer-motion": "^12.10.5",
     "my-project": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
