--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "framer-motion": "^12.10.5",
     "my-project": "file:",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.3",
-    "react-syntax-highlighter": "^15.6.1"
+    "react-syntax-highlighter": "^15.6.1",
+    "swagger-client": "^3.35.0",
+    "swagger-ui-react": "^5.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
